--- a/.pylintrc
+++ b/.pylintrc
@@ -414,8 +414,7 @@ disable=
 # either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once). See also the "--disable" option for examples.
-enable=c-extension-no-member,
-        useless_supression,
+enable=c-extension-no-member,useless-suppression
 
 
 [METHOD_ARGS]
