Unpin libraries and add fixes

--- a/Pipfile
+++ b/Pipfile
@@ -24,7 +24,7 @@ moto = "*"
 freezegun = "*"
 pytest-xdist = "*"
 fakeredis = "*"
-mypy = "==1.5.1"
+mypy = "*"
 black = "*"
 pytest-flask = "*"
 pytest = "*"
@@ -45,7 +45,7 @@ flask = "*"
 flask-babel = "*"
 flask-login = "*"
 flask-wtf = "*"
-gevent = { version = "==23.9.0", platform_python_implementation = "=='CPython'" }
+gevent = { version = "*", platform_python_implementation = "=='CPython'" }
 google-cloud-datastore = "*"
 grpcio = "*"
 gunicorn = "*"
