--- a/Pipfile
+++ b/Pipfile
@@ -30,6 +30,7 @@ pytest-flask = "*"
 pytest = "*"
 pytest-sugar = "*"
 responses = "*"
+types-simplejson = "*"
 types-requests = "*"
 types-redis = "*"
 types-PyYAML = "*"
