Point to dev sds

--- a/docker-compose-dev-mac.yml
+++ b/docker-compose-dev-mac.yml
@@ -28,7 +28,7 @@ services:
             - "8000:8000"
 
     sds:
-        image: "onsdigital/eq-runner-mock-sds:latest"
+        image: "onsdigital/eq-runner-mock-sds:remove-checkletter-from-sds-identifier"
         networks:
             - eq-env
         restart: always
