--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Main
 on:
   push:
     branches:
-      - main
+      - tiles-schema-dev
 
 jobs:
   docker-push:
@@ -14,9 +14,13 @@ jobs:
           run: printf "$GITHUB_SHA" > .application-version
         - name: Build
           run: >
-            docker build -t onsdigital/eq-questionnaire-runner:latest .
-        - name: Push to Docker Hub
+            docker build -t onsdigital/eq-questionnaire-runner:tiles-schema-dev .
+        - name: Push to GAR
+          env:
+            GAR_SERVICE_KEY: ${{ secrets.GAR_SERVICE_KEY }}
           run: |
-            echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-            echo "Pushing with tag [latest]"
-            docker push onsdigital/eq-questionnaire-runner:latest
+            echo $GAR_SERVICE_KEY | docker login -u _json_key --password-stdin https://${{ secrets.GAR_LOCATION }}
+            gcloud auth configure-docker ${{ secrets.GAR_LOCATION }}
+            TAG=tiles-schema-dev
+            echo "Pushing to GAR with tag $TAG"
+            docker push ${{ secrets.GAR_LOCATION }}/${{ secrets.GAR_PROJECT_ID }}/docker-images/eq-questionnaire-runner:$TAG
