--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,12 @@ jobs:
           run: printf "$GITHUB_SHA" > .application-version
         - name: Build
           run: >
-              docker build -t onsdigital/eq-questionnaire-runner:$TAG
-                        -t ${{ secrets.GAR_LOCATION }}/${{ secrets.GAR_PROJECT_ID }}/docker-images/eq-questionnaire-runner:$TAG .
+              docker build -t onsdigital/eq-questionnaire-runner:tiles-schema-dev
+                        -t ${{ secrets.GAR_LOCATION }}/${{ secrets.GAR_PROJECT_ID }}/docker-images/eq-questionnaire-runner:tiles-schema-dev .
         - name: Push to GAR
           env:
             GAR_SERVICE_KEY: ${{ secrets.GAR_SERVICE_KEY }}
           run: |
             echo $GAR_SERVICE_KEY | docker login -u _json_key --password-stdin https://${{ secrets.GAR_LOCATION }}
             gcloud auth configure-docker ${{ secrets.GAR_LOCATION }}
-            echo "Pushing to GAR with tag $TAG"
-            docker push ${{ secrets.GAR_LOCATION }}/${{ secrets.GAR_PROJECT_ID }}/docker-images/eq-questionnaire-runner:$TAG
+            docker push ${{ secrets.GAR_LOCATION }}/${{ secrets.GAR_PROJECT_ID }}/docker-images/eq-questionnaire-runner:tiles-schema-dev
