add all packages to poetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,90 @@
 [tool.black]
-target_version = ['py37']
+target_version = ['py38']
+
+[tool.poetry]
+name = "eq-questionnaire-runner"
+version = "0.1.0"
+description = ""
+authors = ["ONSDigital"]
+readme = "README.md"
+
+[tool.poetry.dev-dependencies]
+"pep8" = "*"
+mock = "*"
+pytest-cov = "*"
+jsonschema = "*"
+pylint = "*"
+pylint-mccabe = "*"
+pylint-quotes = "*"
+pylint-absolute-imports = "*"
+"beautifulsoup4" = "*"
+httmock = "*"
+"flake8" = "*"
+"flake8-debugger" = "*"
+"flake8-mock" = "*"
+"flake8-print" = "*"
+"flake8-tuple" = "*"
+"flake8-datetimez" = "*"
+moto = "*"
+freezegun = "*"
+pytest-xdist = "*"
+fakeredis = "*"
+mypy = "*"
+black = "*"
+pytest-flask = "*"
+pytest = "*"
+pytest-sugar = "*"
+responses = "*"
+types-simplejson = "*"
+types-requests = "*"
+types-redis = "*"
+types-PyYAML = "*"
+types-python-dateutil = "*"
+pytest-mock = "*"
+types-cachetools = "*"
+types-pytz = "*"
+
+
+[tool.poetry.dependencies]
+python = "^3.11.4"
+colorama = "*"
+flask = "*"
+flask-babel = "*"
+flask-login = "*"
+flask-wtf = "*"
+
+google-cloud-datastore = "*"
+grpcio = "*"
+gunicorn = "*"
+pika = "*"
+pyyaml = "*"
+requests = "*"
+sdc-cryptography = "*"
+structlog = "*"
+ua-parser = "*"
+blinker = "*"
+"boto3" = "*"
+humanize = "*"
+flask-talisman = "*"
+marshmallow = "*"
+python-snappy = "*"
+google-cloud-storage = "*"
+jsonpointer = "*"
+redis = "*"
+flask-compress = "*"
+htmlmin = "*"
+coloredlogs = "*"
+uwsgi = "*"
+email-validator = "*"
+itsdangerous = "*"
+google-cloud-pubsub = "*"
+google-cloud-tasks = "*"
+simplejson = "*"
+markupsafe = "*"
+pdfkit = "*"
+ordered-set = "*"
+cachetools = "*"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
