--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,85 +4,84 @@ target_version = ['py38']
 [tool.poetry]
 name = "eq-questionnaire-runner"
 version = "0.1.0"
-description = ""
+description = "adas"
 authors = ["ONSDigital"]
-readme = "README.md"
 
 [tool.poetry.dev-dependencies]
-"pep8" = "*"
-mock = "*"
-pytest-cov = "*"
-jsonschema = "*"
-pylint = "*"
-pylint-mccabe = "*"
-pylint-quotes = "*"
-pylint-absolute-imports = "*"
-"beautifulsoup4" = "*"
-httmock = "*"
-"flake8" = "*"
-"flake8-debugger" = "*"
-"flake8-mock" = "*"
-"flake8-print" = "*"
-"flake8-tuple" = "*"
-"flake8-datetimez" = "*"
-moto = "*"
-freezegun = "*"
-pytest-xdist = "*"
-fakeredis = "*"
-mypy = "*"
-black = "*"
-pytest-flask = "*"
-pytest = "*"
-pytest-sugar = "*"
-responses = "*"
-types-simplejson = "*"
-types-requests = "*"
-types-redis = "*"
-types-PyYAML = "*"
-types-python-dateutil = "*"
-pytest-mock = "*"
-types-cachetools = "*"
-types-pytz = "*"
+"pep8" = "^1.7.1"
+mock = "^5.1.0"
+pytest-cov = "^4.1.0"
+jsonschema = "^4.20.0"
+pylint = "^2.17.7"
+pylint-mccabe = "^0.1.3"
+pylint-quotes = "^0.2.3"
+pylint-absolute-imports = "^1.0.1"
+"beautifulsoup4" = "^4.12.2"
+httmock = "^1.4.0"
+"flake8" = "^6.1.0"
+"flake8-debugger" = "^4.1.2"
+"flake8-mock" = "^0.4"
+"flake8-print" = "^5.0.0"
+"flake8-tuple" = "^0.4.1"
+"flake8-datetimez" = "^20.10.0"
+moto = "^4.2.10"
+freezegun = "^1.2.2"
+pytest-xdist = "^3.5.0"
+fakeredis = "^2.20.0"
+mypy = "^1.7.1"
+black = "^23.11.0"
+pytest-flask = "^1.3.0"
+pytest = "^7.4.3"
+pytest-sugar = "^0.9.7"
+responses = "^0.24.1"
+types-simplejson = "^3.19.0.2"
+types-requests = "^2.31.0.10"
+types-redis = "^4.6.0.11"
+types-PyYAML = "^6.0.12.12"
+types-python-dateutil = "^2.8.19.14"
+pytest-mock = "^3.12.0"
+types-cachetools = "^5.3.0.7"
+types-pytz = "^2023.3.1.1"
 
 
 [tool.poetry.dependencies]
 python = "^3.11.4"
-colorama = "*"
-flask = "*"
-flask-babel = "*"
-flask-login = "*"
-flask-wtf = "*"
-google-cloud-datastore = "*"
-grpcio = "*"
-gunicorn = "*"
-pika = "*"
-pyyaml = "*"
-requests = "*"
-sdc-cryptography = "*"
-structlog = "*"
-ua-parser = "*"
-blinker = "*"
-"boto3" = "*"
-humanize = "*"
-flask-talisman = "*"
-marshmallow = "*"
-python-snappy = "*"
-google-cloud-storage = "*"
-jsonpointer = "*"
-redis = "*"
-flask-compress = "*"
-htmlmin = "*"
-coloredlogs = "*"
-uwsgi = "*"
-email-validator = "*"
-itsdangerous = "*"
-google-cloud-pubsub = "*"
-google-cloud-tasks = "*"
-simplejson = "*"
-markupsafe = "*"
-pdfkit = "*"
-ordered-set = "*"
-cachetools = "*"
+colorama = "^0.4.6"
+flask = "^3.0.0"
+flask-babel = "^4.0.0"
+flask-login = "^0.6.3"
+flask-wtf = "^1.2.1"
+google-cloud-datastore = "^2.3.3"
+grpcio = "^1.59.3"
+gunicorn = "^21.2.0"
+pika = "^1.3.2"
+pyyaml = "^6.0.1"
+requests = "^2.31.0"
+sdc-cryptography = "^1.1.2"
+structlog = "^23.2.0"
+ua-parser = "^0.18.0"
+blinker = "^1.7.0"
+"boto3" = "^1.33.1"
+humanize = "^4.9.0"
+flask-talisman = "^1.1.0"
+marshmallow = "^3.20.1"
+python-snappy = "^0.6.1"
+google-cloud-storage = "^2.13.0"
+jsonpointer = "^2.4"
+redis = "^5.0.1"
+flask-compress = "^1.14"
+htmlmin = "^0.1.12"
+coloredlogs = "^15.0.1"
+uwsgi = "^2.0.23"
+email-validator = "^2.1.0.post1"
+itsdangerous = "^2.1.2"
+google-cloud-pubsub = "^2.18.4"
+google-cloud-tasks = "^2.14.2"
+simplejson = "^3.19.2"
+markupsafe = "^2.1.3"
+pdfkit = "^1.0.0"
+ordered-set = "^4.1.0"
+cachetools = "^5.3.0.7"
 gevent = "^23.9.1"
 
 [build-system]
