update github actions to use poetry over pipenv

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'pipenv'
+          cache: 'poetry'
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -60,21 +60,32 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'pipenv'
       - uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
           cache: "npm"
       - name: Write app version
         run: printf "${{ github.event.pull_request.head.sha }}" > .application-version
-      - name: Install pipenv
-        run: pip install pipenv==2023.8.22
+      - name: Install poetry
+        uses: snok/install-poetry@v1
+        with:
+          version : 1.7.1
+          virtualenvs-create: true
+          virtualenvs-in-project: false
+          virtualenvs-path: ~/.virtualenvs
+      - name: Cache Poetry virtualenv
+        uses: actions/cache@v3
+        id: cache-virtualenv
+        with:
+          path: ~/.virtualenvs
+          key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-virtualenvs-${{ hashFiles('poetry.lock') }}
       - name: Install virtual environment
-        run: pipenv install --dev
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
+        run: poetry install
       - name: Compile translations
         run: make translate
       - name: Running translation tests
-        run: pipenv run python -m scripts.extract_translation_templates --test
+        run: poetry run python -m scripts.extract_translation_templates --test
       - name: Python linting
         run: make lint-python
       - name: Install npm deps
@@ -93,7 +104,6 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'pipenv'
       - name: Install apt dependencies
         run: |
             sudo apt-get install libsnappy-dev libgconf-2-4 jq
@@ -104,9 +114,21 @@ jobs:
             sudo dpkg -i wkhtmltox_0.12.6-1.bionic_amd64.deb
       - name: Write app version
         run: printf "${{ github.event.pull_request.head.sha }}" > .application-version
-      - name: Install poetry
-        run: pip install poetry
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 1.7.1
+          virtualenvs-create: true
+          virtualenvs-in-project: false
+          virtualenvs-path: ~/.virtualenvs
+      - name: Cache Poetry virtualenv
+        uses: actions/cache@v3
+        id: cache-virtualenv
+        with:
+          path: ~/.virtualenvs
+          key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-virtualenvs-${{ hashFiles('poetry.lock') }}
       - name: Install virtual environment
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: poetry install
       - name: Load templates
         run: make load-design-system-templates
@@ -145,11 +167,22 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'pipenv'
-      - name: Install pipenv
-        run: pip install pipenv==2023.8.22
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 1.7.1
+          virtualenvs-create: true
+          virtualenvs-in-project: false
+          virtualenvs-path: ~/.virtualenvs
+      - name: Cache Poetry virtualenv
+        uses: actions/cache@v3
+        id: cache-virtualenv
+        with:            
+          path: ~/.virtualenvs
+          key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-virtualenvs-${{ hashFiles('poetry.lock') }}
       - name: Install virtual environment
-        run: pipenv install --dev
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
+        run: poetry install
       - name: Install npm deps
         run: npm install
       - name: Docker compose
