--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ target_version = ['py38']
 [tool.poetry]
 name = "eq-questionnaire-runner"
 version = "0.1.0"
-description = "adas"
+description = "Python-Flask server side web application"
 authors = ["ONSDigital"]
 
 [tool.poetry.dev-dependencies]
-"pep8" = "^1.7.1"
+pep8 = "^1.7.1"
 mock = "^5.1.0"
 pytest-cov = "^4.1.0"
 jsonschema = "^4.20.0"
@@ -16,14 +16,14 @@ pylint = "^2.17.7"
 pylint-mccabe = "^0.1.3"
 pylint-quotes = "^0.2.3"
 pylint-absolute-imports = "^1.0.1"
-"beautifulsoup4" = "^4.12.2"
+beautifulsoup4 = "^4.12.2"
 httmock = "^1.4.0"
-"flake8" = "^6.1.0"
-"flake8-debugger" = "^4.1.2"
-"flake8-mock" = "^0.4"
-"flake8-print" = "^5.0.0"
-"flake8-tuple" = "^0.4.1"
-"flake8-datetimez" = "^20.10.0"
+flake8 = "^6.1.0"
+flake8-debugger = "^4.1.2"
+flake8-mock = "^0.4"
+flake8-print = "^5.0.0"
+flake8-tuple = "^0.4.1"
+flake8-datetimez = "^20.10.0"
 moto = "^4.2.10"
 freezegun = "^1.2.2"
 pytest-xdist = "^3.5.0"
@@ -61,7 +61,7 @@ sdc-cryptography = "^1.1.2"
 structlog = "^23.2.0"
 ua-parser = "^0.18.0"
 blinker = "^1.7.0"
-"boto3" = "^1.33.1"
+boto3 = "^1.33.1"
 humanize = "^4.9.0"
 flask-talisman = "^1.1.0"
 marshmallow = "^3.20.1"
