--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install virtual environment
         run: |
           sudo apt-get install libsnappy-dev
-          poetry install
+          poetry install --with dev
   node-dependencies:
     runs-on: ubuntu-22.04
     steps:
@@ -113,7 +113,7 @@ jobs:
             sudo dpkg -i wkhtmltox_0.12.6-1.bionic_amd64.deb
       - name: Write app version
         run: printf "${{ github.event.pull_request.head.sha }}" > .application-version
-      - name: Install Poetry
+      - name: Install poetry
         uses: snok/install-poetry@v1
         with:
           version: 1.7.1
@@ -128,7 +128,7 @@ jobs:
           key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-virtualenvs-${{ hashFiles('poetry.lock') }}
       - name: Install virtual environment
         if: steps.cache-virtualenv.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction
+        run: poetry install --with dev
       - name: Load templates
         run: make load-design-system-templates
       - name: Compile translations
@@ -181,7 +181,7 @@ jobs:
           key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-virtualenvs-${{ hashFiles('poetry.lock') }}
       - name: Install virtual environment
         if: steps.cache-virtualenv.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction
+        run: poetry install --with dev
       - name: Install npm deps
         run: npm install
       - name: Docker compose
