--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'poetry'
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -56,9 +57,10 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           echo "PYTHON_VERSION=$(cat .python-version)" >> $GITHUB_ENV
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+          cache: poetry
       - uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
@@ -103,6 +105,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'poetry'
       - name: Install apt dependencies
         run: |
             sudo apt-get install libsnappy-dev libgconf-2-4 jq
@@ -127,6 +130,7 @@ jobs:
           path: ~/.virtualenvs
           key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-virtualenvs-${{ hashFiles('poetry.lock') }}
       - name: Install Dependencies 
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: poetry install --no-interaction
       - name: Load templates
         run: make load-design-system-templates
@@ -165,6 +169,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'poetry'
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
