add missing quoation marks

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -60,7 +60,7 @@ jobs:
       - uses: actions/setup-python
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: poetry
+          cache: 'poetry'
       - uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
