--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -118,8 +118,8 @@ jobs:
         with:
           version: 1.7.1
           virtualenvs-create: true
-          virtualenvs-in-project: false
-          virtualenvs-path: ~/.virtualenvs
+          virtualenvs-in-project: true
+          installer-parallel: true
       - name: Cache Poetry virtualenv
         uses: actions/cache@v3
         id: cache-virtualenv
