--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -119,7 +119,7 @@ jobs:
           version: 1.7.1
           virtualenvs-create: true
           virtualenvs-in-project: true
-          installer-parallel: true
+          virtualenvs-path: ~/.virtualenvs
       - name: Cache Poetry virtualenv
         uses: actions/cache@v3
         id: cache-virtualenv
