--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -76,8 +76,8 @@ jobs:
         uses: actions/cache@v3
         id: cache-virtualenv
         with:
-          path: ~/.virtualenvs
-          key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-virtualenvs-${{ hashFiles('poetry.lock') }}
+          path: .venv
+          key: venv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('poetry.lock') }}
       - name: Install virtual environment
         if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: poetry install --no-interaction
@@ -113,19 +113,21 @@ jobs:
             sudo dpkg -i wkhtmltox_0.12.6-1.bionic_amd64.deb
       - name: Write app version
         run: printf "${{ github.event.pull_request.head.sha }}" > .application-version
-      - name: Install poetry
+      - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
           version: 1.7.1
           virtualenvs-create: true
+          virtualenvs-in-project: false
           virtualenvs-path: ~/.virtualenvs
       - name: Cache Poetry virtualenv
         uses: actions/cache@v3
         id: cache-virtualenv
         with:
-          path: ~/.virtualenvs
-          key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-virtualenvs-${{ hashFiles('poetry.lock') }}
+          path: .venv
+          key: venv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('poetry.lock') }}
       - name: Install Dependencies 
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: poetry install --no-interaction
       - name: Load templates
         run: make load-design-system-templates
@@ -175,9 +177,10 @@ jobs:
         uses: actions/cache@v3
         id: cache-virtualenv
         with:            
-          path: ~/.virtualenvs
-          key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-virtualenvs-${{ hashFiles('poetry.lock') }}
+          path: .venv
+          key: venv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('poetry.lock') }}
       - name: Install virtual environment
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: poetry install --no-interaction
       - name: Install npm deps
         run: npm install
