--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ pdfkit = "^1.0.0"
 ordered-set = "^4.1.0"
 cachetools = "^5.3.0.7"
 gevent = "^23.9.1"
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
