update yaml file to load env

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -137,6 +137,8 @@ jobs:
         run: cat .development.env
       - name: Link env vars
         run: ln -sf .development.env .env
+      - nam: Load environment variables
+        run: cp development.env .env
       - name: Debug - Print contents of .env
         run: cat .env      
       - name: Running unit tests
