--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -137,7 +137,8 @@ jobs:
         run: ln -sf .development.env .env 
       - name: Load environment variables
         run: |
-          source .env
+          cp .env .env.local
+          source .env.local 
       - name: Running unit tests
         run: make test-unit
   validate-schemas:
