update env file and load enveiorment variable command
Signed-off-by: Yuyutsu Rai <Yuyutsu.Rai@ons.gov.uk>

--- a/.development.env
+++ b/.development.env
@@ -18,7 +18,7 @@ EQ_KEYS_FILE=dev-keys.yml
 EQ_INDIVIDUAL_RESPONSE_POSTAL_DEADLINE=2021-04-28T14:00:00+00:00
 AWS_DEFAULT_REGION=eu-west-1
 HTTP_KEEP_ALIVE=2
-GUNICORN_CMD_ARGS=-c gunicorn_config.py
+GUNICORN_CMD_ARGS=-"-c gunicorn_config.py"
 WEB_SERVER_WORKERS=3
 WEB_SERVER_THREADS=10
 WEB_SERVER_UWSGI_ASYNC_CORES=10
