remove load env step and update unit tes tstep

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -135,12 +135,11 @@ jobs:
         run: make translate
       - name: Link env vars
         run: ln -sf .development.env .env 
-      - name: Load environment variables
+      - name: Running unit tests
         run: |
           cp .development.env .env.local
-          source .development.env .env.local 
-      - name: Running unit tests
-        run: make test-unit
+          source .development.env .env.local       
+          make test-unit
   validate-schemas:
     runs-on: ubuntu-22.04
     steps:
