update command to use poetry run in Load enviorment variables job yml
Signed-off-by: Yuyutsu Rai <Yuyutsu.Rai@ons.gov.uk>

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -137,7 +137,7 @@ jobs:
         run: ln -sf .development.env .env 
       - name: Load Environment Variables
         run: |
-          python -m dotenv --file .development.env
+          poetry run python -m dotenv
       - name: Running unit tests
         run:     
           make test-unit
