remove cpy line for the setup enviorment variables

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -137,8 +137,7 @@ jobs:
         run: ln -sf .development.env .env 
       - name: Set up environment variables
         run: |
-          cp .development.env .env
-          source .env
+          source .development.env
       - name: Running unit tests
         run:     
           make test-unit
