--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,7 @@ ordered-set = "^4.1.0"
 cachetools = "^5.3.0.7"
 gevent = "^23.9.1"
 python-dotenv = "^1.0.0"
+poetry-dotenv-plugin = "^0.2.0"
 
 [build-system]
 requires = ["poetry-core"]
