--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -135,9 +135,12 @@ jobs:
         run: make translate
       - name: Link env vars
         run: ln -sf .development.env .env 
-      - name: Set up environment variables
-        run: |
-          poetry run python -c "from dotenv import load_dotenv; load_dotenv(dotenv_path='./.development.env')"
+      - name: Load .env File
+        uses: xom9ikk/dotenv@v2
+        with:
+          path: ./.env
+          mode: development
+          load-mode: strict
       - name: Running unit tests
         run:     
           make test-unit
