revert pylint verison back

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ pep8 = "*"
 mock = "*"
 pytest-cov = "*"
 jsonschema = "*"
-pylint = "*"
+pylint = "^2.17.7"
 pylint-mccabe = "*"
 pylint-quotes = "*"
 pylint-absolute-imports = "*"
