--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 mock = "*"
 pytest-cov = "*"
 jsonschema = "*"
-pylint = "*"
+pylint = "2.17.7"
 pylint-mccabe = "*"
 pylint-quotes = "*"
 pylint-absolute-imports = "*"
@@ -20,7 +20,7 @@ httmock = "*"
 "flake8-print" = "*"
 "flake8-tuple" = "*"
 "flake8-datetimez" = "*"
-moto = "*"
+moto = "4.2.10"
 freezegun = "*"
 pytest-xdist = "*"
 fakeredis = "*"
