test if GA can install plugin

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -39,6 +39,8 @@ jobs:
         run: |
           sudo apt-get install libsnappy-dev
           poetry install --no-interaction 
+      - name: Install dotenv plugin
+        run: poetry self add poetry-plugin-dotenv
   node-dependencies:
     runs-on: ubuntu-22.04
     steps:
@@ -135,8 +137,6 @@ jobs:
         run: make translate
       - name: Link env vars
         run: ln -sf .development.env .env 
-      - name: Load .env File
-        uses: xom9ikk/dotenv@v2
       - name: Running unit tests
         run:     
           make test-unit
